# gogglesmm

./: .gitignore  .hgignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING  ChangeLog  INSTALL  Makefile  README  configure
cfox/: AUTHORS  CMakeLists.txt  INSTALL  LICENSE_ADDENDUM  README  README.FOX  TRACING
cfox/include/: FX4Splitter.h  FX7Segment.h  FXAccelTable.h  FXApp.h  FXArray.h  FXArrowButton.h  FXAtomic.h  FXAutoPtr.h  FXAutoThreadStorageKey.h  FXBMPIcon.h  FXBMPImage.h  FXBZFileStream.h  FXBarrier.h  FXBitmap.h  FXBitmapFrame.h  FXBitmapView.h  FXButton.h  FXCURCursor.h  FXCalendar.h  FXCalendarView.h  FXCallback.h  FXCanvas.h  FXCheckButton.h  FXChoiceBox.h  FXColorBar.h  FXColorDialog.h  FXColorList.h  FXColorRing.h  FXColorSelector.h  FXColorWell.h  FXColorWheel.h  FXColors.h  FXComboBox.h  FXCompletion.h  FXComplexd.h  FXComplexf.h  FXComposeContext.h  FXComposite.h  FXCondition.h  FXConsole.h  (+284 more)
cfox/lib/: CMakeLists.txt  FX4Splitter.cpp  FX7Segment.cpp  FX885910Codec.cpp  FX885911Codec.cpp  FX885913Codec.cpp  FX885914Codec.cpp  FX885915Codec.cpp  FX885916Codec.cpp  FX88591Codec.cpp  FX88592Codec.cpp  FX88593Codec.cpp  FX88594Codec.cpp  FX88595Codec.cpp  FX88596Codec.cpp  FX88597Codec.cpp  FX88598Codec.cpp  FX88599Codec.cpp  FXAccelTable.cpp  FXApp.cpp  FXArray.cpp  FXArrowButton.cpp  FXAtomic.cpp  FXAutoThreadStorageKey.cpp  FXBMPIcon.cpp  FXBMPImage.cpp  FXBZFileStream.cpp  FXBarrier.cpp  FXBitmap.cpp  FXBitmapFrame.cpp  FXBitmapView.cpp  FXButton.cpp  FXCP1250Codec.cpp  FXCP1251Codec.cpp  FXCP1252Codec.cpp  FXCP1253Codec.cpp  FXCP1254Codec.cpp  FXCP1255Codec.cpp  FXCP1256Codec.cpp  FXCP1257Codec.cpp  (+363 more)
cfox/utils/: CMakeLists.txt  reswrap.1  reswrap.cpp
gap/: CMakeLists.txt  ap_app_queue.cpp  ap_buffer.cpp  ap_buffer.h  ap_buffer_io.cpp  ap_config.h.in  ap_connect.cpp  ap_connect.h  ap_convert.cpp  ap_convert.h  ap_crossfader.cpp  ap_crossfader.h  ap_decoder_plugin.cpp  ap_decoder_plugin.h  ap_decoder_thread.cpp  ap_decoder_thread.h  ap_defs.h  ap_device.cpp  ap_engine.cpp  ap_engine.h  ap_event.cpp  ap_event_private.h  ap_format.cpp  ap_format.h  ap_http_client.cpp  ap_http_response.cpp  ap_input_plugin.cpp  ap_input_plugin.h  ap_input_thread.cpp  ap_input_thread.h  ap_output_plugin.h  ap_output_thread.cpp  ap_output_thread.h  ap_packet.cpp  ap_packet.h  ap_pipe.cpp  ap_pipe.h  ap_player.cpp  ap_reactor.cpp  ap_reactor.h  (+16 more)
gap/include/: ap.h  ap_app_queue.h  ap_buffer_base.h  ap_buffer_io.h  ap_common.h  ap_device.h  ap_event.h  ap_event_queue.h  ap_http.h  ap_http_client.h  ap_http_response.h  ap_player.h  ap_xml_parser.h
gap/lib/alac/: CMakeLists.txt  alac.c  alac.h
gap/lib/md5/: CMakeLists.txt  md5.cpp
gap/plugins/: ap_a52.cpp  ap_aac.cpp  ap_aac_plugin.cpp  ap_aiff.cpp  ap_alac.cpp  ap_alsa.cpp  ap_alsa_plugin.cpp  ap_cdda.cpp  ap_cdda_plugin.cpp  ap_dca.cpp  ap_directx.cpp  ap_file.cpp  ap_file_plugin.h  ap_flac.cpp  ap_flac_plugin.cpp  ap_http.cpp  ap_id3v2.cpp  ap_id3v2.h  ap_jack.cpp  ap_jack_plugin.cpp  ap_jack_plugin.h  ap_m3u.cpp  ap_mad.cpp  ap_mad_plugin.cpp  ap_matroska.cpp  ap_mp4.cpp  ap_musepack.cpp  ap_musepack_plugin.cpp  ap_ogg.cpp  ap_ogg_decoder.cpp  ap_ogg_decoder.h  ap_opus.cpp  ap_opus.h  ap_opus_plugin.cpp  ap_oss_defs.h  ap_oss_plugin.cpp  ap_pcm.cpp  ap_pls.cpp  ap_pulse.cpp  ap_pulse_plugin.cpp  (+13 more)
gap/test/: CMakeLists.txt  http.cpp  lastversion.cpp
src/: CMakeLists.txt  GMAbout.cpp  GMAbout.h  GMAlbumList.cpp  GMAlbumList.h  GMAnimImage.cpp  GMAnimImage.h  GMApp.cpp  GMApp.h  GMAppStatusNotify.cpp  GMAppStatusNotify.h  GMAudioPlayer.cpp  GMAudioPlayer.h  GMAudioScrobbler.cpp  GMAudioScrobbler.h  GMAutoPtr.h  GMClipboard.cpp  GMClipboard.h  GMColumnDialog.cpp  GMColumnDialog.h  GMCover.cpp  GMCover.h  GMCoverCache.cpp  GMCoverCache.h  GMCoverLoader.h  GMCoverManager.cpp  GMCoverManager.h  GMCoverThumbs.cpp  GMCoverThumbs.h  GMDBus.cpp  GMDBus.h  GMDatabase.cpp  GMDatabase.h  GMDatabaseSource.cpp  GMDatabaseSource.h  GMEQDialog.cpp  GMEQDialog.h  GMFetch.cpp  GMFetch.h  GMFilename.cpp  (+94 more)
src/gap/: .hgignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  ap_app_queue.cpp  ap_buffer.cpp  ap_buffer.h  ap_buffer_io.cpp  ap_config.h  ap_config.h.in  ap_connect.cpp  ap_connect.h  ap_convert.cpp  ap_convert.h  ap_decoder_plugin.cpp  ap_decoder_plugin.h  ap_decoder_thread.cpp  ap_decoder_thread.h  ap_defs.h  ap_device.cpp  ap_engine.cpp  ap_engine.h  ap_event.cpp  ap_event_private.h  ap_format.cpp  ap_format.h  ap_http_client.cpp  ap_http_response.cpp  ap_input_plugin.cpp  ap_input_plugin.h  ap_input_thread.cpp  ap_input_thread.h  ap_output_plugin.h  ap_output_thread.cpp  ap_output_thread.h  ap_packet.cpp  ap_packet.h  ap_pipe.cpp  ap_pipe.h  (+18 more)
src/gap/include/: ap.h  ap_app_queue.h  ap_buffer.h  ap_buffer_base.h  ap_buffer_io.h  ap_common.h  ap_device.h  ap_event.h  ap_event_queue.h  ap_http.h  ap_http_client.h  ap_http_response.h  ap_player.h  ap_xml_parser.h
src/gap/plugins/: ap_aac_plugin.cpp  ap_aiff_plugin.cpp  ap_alsa_plugin.cpp  ap_alsa_plugin.h  ap_asf_plugin.cpp  ap_asx_plugin.cpp  ap_avc_plugin.cpp  ap_cdda_plugin.cpp  ap_cdda_plugin.h  ap_file_plugin.cpp  ap_file_plugin.h  ap_flac_plugin.cpp  ap_http_plugin.cpp  ap_http_plugin.h  ap_id3v2.cpp  ap_id3v2.h  ap_jack_plugin.cpp  ap_jack_plugin.h  ap_m3u_plugin.cpp  ap_mad_plugin.cpp  ap_mms_plugin.cpp  ap_mms_plugin.h  ap_mp4.cpp  ap_musepack_plugin.cpp  ap_ogg_decoder.cpp  ap_ogg_decoder.h  ap_ogg_plugin.cpp  ap_opus_plugin.cpp  ap_oss_defs.h  ap_oss_plugin.cpp  ap_oss_plugin.h  ap_pcm_plugin.cpp  ap_pls_plugin.cpp  ap_pulse_plugin.cpp  ap_pulse_plugin.h  ap_rsound_plugin.cpp  ap_rsound_plugin.h  ap_smb_plugin.cpp  ap_smb_plugin.h  ap_vorbis_plugin.cpp  (+4 more)
src/gap/src/: ap_app_queue.cpp  ap_buffer.cpp  ap_convert.cpp  ap_convert.h  ap_decoder_plugin.cpp  ap_decoder_plugin.h  ap_decoder_thread.cpp  ap_decoder_thread.h  ap_defs.h  ap_device.cpp  ap_engine.cpp  ap_engine.h  ap_event.cpp  ap_event_private.h  ap_event_queue.cpp  ap_format.cpp  ap_format.h  ap_http.cpp  ap_input_plugin.cpp  ap_input_plugin.h  ap_input_thread.cpp  ap_input_thread.h  ap_memory_buffer.cpp  ap_pipe.h  (+19 more)
(+69 files in other folders)
